# EnsnarlNet

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Code/: eigenvectors - symmetric ladders.ipynb  ensnarlNet_data_all.ipynb  ensnarlNet_multiscale.ipynb  index.md  sym_ladder.py
data/: README.md
gemini_ensnarl/: __init__.py  lattices.py  linking.py  nulls.py  regions.py  signed.py  viz_data.py  viz_lattice.py
notebooks/: 00_small_examples.ipynb  01_synthetic_lattices.ipynb  02_real_data.ipynb
results/: index.md
