[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-ensnarl"
version = "0.1.0"
description = "GEMINI: Generalized Ensnarlment Measure from Incomplete-linkage of Network-network Interactions"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Yu Tian", email = "yu.tian.research@gmail.com" },
    { name = "Chinmayi Subramanya" },
    { name = "Carl D. Modes" },
]
keywords = ["spatial networks", "linking number", "Gauss linking integral", "signed graphs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.22",
    "networkx>=2.8",
    "scipy>=1.8",
    "pandas>=1.4",
    "matplotlib>=3.5",
    "plotly>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Repository = "https://github.com/<your-account>/GEMINI"
"Paper (arXiv)" = "https://arxiv.org/abs/2606.05153"

[tool.setuptools]
packages = ["gemini_ensnarl"]
